# vscode-jupyter-tutorial

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: notebooks-in-vscode.md  papermill.md  poetry-init-logs.md  pre-commit-hooks.md
notebooks/: complex_papermill_example.ipynb  papermill_example.ipynb
notebooks/papermill_runs/: complex_example.ipynb  no_args.ipynb  with_args.ipynb
parameters/: test_config.yaml
scripts/: example_papermill_run.sh  run_all_examples.sh
