[tool.poetry]
name = "vscode-tutorial"
version = "0.1.0"
description = ""
authors = ["Chris Hacker <c.m.hacker1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
papermill = "^2.6.0"
jupyter = "^1.0.0"
black = "^24.4.2"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
